<resources>
    <string name="app_name">PowerSurvey</string>

    <!--- MyLocationActivity用-->
    <string name="locationStart">測位開始</string>
    <string name="locationWait">測位待機中</string>
    <string name="locationPositioning">測位中</string>
    <string name="locationStop">測位停止</string>
    <string name="locationSetting">設定</string>

    <!--- SettingActivity用-->
    <string name="settingActIsCold">アシストデータ削除</string>

    <!---LocationLog用-->
    <string name="settingHeader">測位方式,測位開始待ち時間,TrackingTimer,Interval,アシストデータ削除時間,アシストデータ削除有無,ログ出力有無</string>
    <string name="locationHeader">Tracking開始時間,TrackingFix時間,測位成否,緯度,経度,経過時間,Accuracy,LocationTime(epoch),LocationTime(UTC)</string>

    <!---Setting用の項目 -->
    <string name="settingPrefName">MyLocationSetting</string>
    <string name="settingLocationType">LOCATIONTYPE</string>
    <string name="settingWaitStart">Tracking開始待ち時間</string>
    <string name="settingTrackingTime">Tracking実行時間</string>
    <string name="settingInterval">INTERVAL</string>
    <string name="settingIsCold">アシストデータ削除(最初の測位のみ)</string>
    <string name="settingDelAssistdataTime">アシストデータ削除後待ち時間</string>
    <string name="settingIsOutputLog">ログ出力</string>

    <!---測位種別用の文字列定数 -->
    <string name="locationList">測位種別</string>
    <string name="locationUeb">UEB</string>
    <string name="locationUea">UEA</string>
    <string name="locationTracking">TRACKING</string>

    <!---測位結果をIntentで通知する場合の判別用のタグ-->
    <string name="TagisFix">isFix</string>
    <string name="TagLocation">location</string>
    <string name="Tagttff">TTFF</string>
    <string name="TagLocationStarttime">locationStartTime</string>
    <string name="TagLocationStoptime">locationStopTime</string>

    <!--ServiceからPresentationが受け取る値の種類-->
    <!--この値によってActivityに対する処理を変える-->
    <string name="category">category</string>
    <string name="categoryLocation">categoryLocation</string>
    <string name="categoryColdStart">CategoryColdStart</string>
    <string name="categoryColdStop">CategoryColdStop</string>
    <string name="categoryServiceEnd">CategoryServiceEnd</string>
    <string name="categoryWaitStartTimeEnd">waitStartTimeEnd</string>
    <string name="categoryTrackingTimeEnd">trackingTimeEnd</string>
    <string name="categoryIntervalTimeEnd">intervalTimeEnd</string>

</resources>
